--- a/index.html
+++ b/index.html
@@ -103,18 +103,28 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <img class="profilepic" src=
-                    "https://pbs.twimg.com/profile_images/641063961144750081/IqosL0KD.jpg">
+                    "https://aemoore62.github.io/resume/images/ae_img.jpeg">
 
                     <h2>About Me</h2>
 
                     <hr>
 
 
-                    <p class="lead">Lorem Ipsum is simply dummy text of the
-                    printing and typesetting industry. <span>Lorem Ipsum</span>
-                    has been the industry's standard dummy text ever since the
-                    1500s, when an <span>unknown printer</span> took a galley
-                    of type and scrambled it to make a type specimen book.</p>
+                    <p class="lead">
+                    
+                    I collaborate across the sciences to reimagine how scientists share complex 
+                    information. As digital technologies advance—ranging from artificial intelligence 
+                    to quantum computing—scientists gain new avenues towards insight and innovation. 
+                    Yet <span>scientists remain challenged to rapidly share the data</span>span>, metadata, and interpretations 
+                    that break grounds, transform life, and propel science. I collaboratively <span>reimagine how scientists engage
+                    ubiquitous technologies</span> to share complex information about how investigations are conducted. 
+                    Given my user-centric approach, I have prototyped and continue developing spreadsheet-based tools for 
+                    sharing science. Check out my products below to learn more.
+                    
+                    I’m currently transitioning into a brief term as a Postdoctoral Fellow in the Edison Lab at the University of 
+                    Georgia (UGA). As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
+                    actively developing (see below). I hold a PhD in Bioinformatics from UGA and a BA in Bioinformatics from 
+                    Hampshire College.</p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
