--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     I collaborate across the sciences to reimagine how scientists share complex 
                     information. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span>scientists remain challenged to rapidly share the data</span>span>, metadata, and interpretations 
+                    Yet <span>scientists remain challenged to rapidly share the data</span>, metadata, and interpretations 
                     that break grounds, transform life, and propel science. I collaboratively <span>reimagine how scientists engage
                     ubiquitous technologies</span> to share complex information about how investigations are conducted. 
-                    Given my user-centric approach, I have prototyped and continue developing spreadsheet-based tools for 
-                    sharing science. Check out my products below to learn more.
+
+                        <hr>
                     
                     I’m currently transitioning into a brief term as a Postdoctoral Fellow in the Edison Lab at the University of 
                     Georgia (UGA). As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
