--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
 
                     <p class="lead">
                     
-                    I collaborate across the sciences to reimagine how scientists share complex 
-                    information. As digital technologies advance—ranging from artificial intelligence 
+                    I collaborate across the sciences to <span>advance how scientists share complex 
+                    information</span>span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span>scientists remain challenged to rapidly share share</span>, including the data, metadata, and interpretations 
+                    Yet <span>scientists remain challenged to rapidly share science</span>, including the data, metadata, and interpretations 
                     that break grounds, transform life, and propel science. I collaboratively <span>reimagine how scientists engage
                     ubiquitous technologies</span> to share complex information about how investigations are conducted. 
 
+                        <br>
                         <br>
                     
                     I’m currently transitioning into a brief term as a Postdoctoral Fellow in the Edison Lab at the University of 
