--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p class="lead">
                     
                     I collaborate across the sciences to <span>advance how scientists share complex 
-                    information</span>span>. As digital technologies advance—ranging from artificial intelligence 
+                    information</span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
                     Yet <span>scientists remain challenged to rapidly share science</span>, including the data, metadata, and interpretations 
                     that break grounds, transform life, and propel science. I collaboratively <span>reimagine how scientists engage
