--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 
                     <p class="lead">
                     
-                    I collaborate across the sciences to <span>advance how scientists share complex 
-                    information</span>. As digital technologies advance—ranging from artificial intelligence 
+                    I collaborate across the sciences to <span><b>advance how scientists share complex 
+                    information</b>b></span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span>scientists remain challenged to rapidly share science</span>, including the data, metadata, and interpretations 
-                    that break grounds, transform life, and propel science. I collaboratively <span>reimagine how scientists engage
-                    ubiquitous technologies</span> to share complex information about how investigations are conducted. 
+                    Yet <span><b>scientists remain challenged to rapidly share science</b>b></span>, including the data, metadata, and interpretations 
+                    that break grounds, transform life, and propel science. I collaboratively <span><b>reimagine how scientists engage
+                    ubiquitous technologies</b>b></span> to share complex information about how investigations are conducted. 
 
                         <br>
                         <br>
                     
-                    I’m currently transitioning into a brief term as a Postdoctoral Fellow in the Edison Lab at the University of 
+                    I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at the University of 
                     Georgia (UGA). As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
                     actively developing (see below). I hold a PhD in Bioinformatics from UGA and a BA in Bioinformatics from 
                     Hampshire College.</p>
