--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                     <p class="lead">
                     
                     I collaborate across the sciences to <span><b>advance how scientists share complex 
-                    information</b>b></span>. As digital technologies advance—ranging from artificial intelligence 
+                    information</b></span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span><b>scientists remain challenged to rapidly share science</b>b></span>, including the data, metadata, and interpretations 
+                    Yet <span><b>scientists remain challenged to rapidly share science</b></span>, including the data, metadata, and interpretations 
                     that break grounds, transform life, and propel science. I collaboratively <span><b>reimagine how scientists engage
-                    ubiquitous technologies</b>b></span> to share complex information about how investigations are conducted. 
+                    ubiquitous technologies</b></span> to share complex information about how investigations are conducted. 
 
                         <br>
                         <br>
@@ -140,10 +140,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
-                    <h2>Skills</h2>
+                    <h2>Expertise</h2>
 
 
-                    <p class="lead">Here are a few cool things about me</p>
+                    <p class="lead">Let's advance how scientists share information.</p>
 
                     <hr>
                 </div>
@@ -152,44 +152,34 @@
 
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-user"></span>
+                    <span class="lnr lnr-earth"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Ideate</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>I most enjoy originating ideas, both independently and collaboratively. I am keen to identify existing resources and
+                    repurpose them in novel ways. I feel brightest when I collaboratively synthesize concepts, technologies,
+                    inquiries, and insights that demonstrate the potential of narrowly explored spaces.</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-star"></span>
+                    <span class="lnr lnr-cog"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Develop</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>I like to repeatedly grapple with new and contrasting requirements until I've generated and prototyped ideas that highly satisfy users. To do this, I not only take a user-centric approach toward developing digital resources but also take opportunities to literally put myself in the users' workflow. I appreciate collaborating with others to see an app through to production</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-diamond"></span>
+                    <span class="lnr lnr-pencil"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Communicate</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>I love to write and generate engaging visualizations. I enjoy targeting a diversity of audiences, including experts across scientific domains, business stakeholders, and the general public. I enjoy crafting clear, concise narratives that balance scientific insight with context and impact that engage diverse audiences.</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
@@ -201,10 +191,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
-                    <h2>Things I've done</h2>
+                    <h2>My path to advancing shared science</h2>
 
 
-                    <p class="lead">Here are a few cool things about me</p>
+                    <!--  <p class="lead">Here are a few cool things about me</p> -->
 
                     <hr class="white">
                 </div>
