--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                         <br>
                         <br>
                     
-                    I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at the University of 
+                    I hold a PhD in Bioinformatics from UGA and a BA in Bioinformatics from 
+                    Hampshire College. I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at the University of 
                     Georgia (UGA). As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
-                    actively developing (see below). I hold a PhD in Bioinformatics from UGA and a BA in Bioinformatics from 
-                    Hampshire College.</p>
+                    actively developing (see below). </p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
@@ -169,7 +169,7 @@
                     <h2>Develop</h2>
 
 
-                    <p>I like to repeatedly grapple with new and contrasting requirements until I've generated and prototyped ideas that highly satisfy users. To do this, I not only take a user-centric approach toward developing digital resources but also take opportunities to literally put myself in the users' workflow. I appreciate collaborating with others to see an app through to production</p>
+                    <p>I like to repeatedly grapple with new and contrasting requirements until I've generated and prototyped ideas that highly satisfy users. To do this, I not only take a user-centric approach toward developing digital resources but also take opportunities to literally put myself in the users' workflow. I appreciate collaborating with others to see an app through to production.</p>
                 </div>
 
 
