--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                         <br>
                         <br>
                     
-                    I hold a PhD in Bioinformatics from UGA and a BA in Bioinformatics from 
-                    Hampshire College. I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at the University of 
-                    Georgia (UGA). As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
+                    I hold a PhD in Bioinformatics from University of Georgia (UGA) and a BA in Bioinformatics from 
+                    Hampshire College. I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at 
+                    UGA. As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
                     actively developing (see below). </p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
@@ -221,7 +221,7 @@
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2><b>2012</b> | We can automate this in spreadsheets.</h2>
 
 
                                 <p>Lorem ipsum dolor sit amet, consectetur
@@ -245,7 +245,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2>This Happened</h2>
+                                <h2><b>2016</b> | I can be a scientist.</h2>
 
 
                                 <p>Lorem ipsum dolor sit amet, consectetur
@@ -269,7 +269,7 @@
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2><b>2017</b> | We can use slime mold to help humans make decisions.</h2>
 
 
                                 <p>Lorem ipsum dolor sit amet, consectetur
@@ -293,7 +293,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2>This Happened</h2>
+                                <h2><b>2018</b> | Why's it so hard to access metadata?</h2>
 
 
                                 <p>Lorem ipsum dolor sit amet, consectetur
@@ -317,7 +317,55 @@
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2><b>2019</b> | Share Science with Sheets.</h2>
+
+
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Atque, facilis quo maiores
+                                magnam modi ab libero praesentium
+                                blanditiis.</p>
+                            </div>
+                        </div>
+                        <!-- /Timeline Item-->
+                        <!-- Timeline Item, copy from here to create various boxes -->
+
+
+                        <div class="timeline-item">
+                            <!--Icon inside the circle-->
+
+
+                            <div class="timeline-icon">
+                                <i class="fa fa-group"></i>
+                            </div>
+                            <!-- Content from timeline box and position (right or left)-->
+
+
+                            <div class="timeline-content left">
+                                <h2><b>2021</b> | Can quantum computing illuminate biological mechanisms?</h2>
+
+
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Atque, facilis quo maiores
+                                magnam modi ab libero praesentium
+                                blanditiis.</p>
+                            </div>
+                        </div>
+                        <!-- /Timeline Item-->
+                        <!-- Timeline Item, copy from here to create various boxes -->
+
+
+                        <div class="timeline-item">
+                            <!--Icon inside the circle-->
+
+
+                            <div class="timeline-icon">
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <!-- Content from timeline box and position (right or left)-->
+
+
+                            <div class="timeline-content right">
+                                <h2><b>Now</b> | Let's share science.</h2>
 
 
                                 <p>Lorem ipsum dolor sit amet, consectetur
