--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet"><!-- FontAwesome Icon Font -->
     <link href=
-    "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    "https://maxcdn.bootstrapcdn.com/font-awesome/6.4.2/css/font-awesome.min.css"
     rel="stylesheet"><!-- LinearIcons Icon Font -->
     <link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel=
     "stylesheet"><!-- Main Stylesheet -->
@@ -215,7 +215,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-star"></i>
+                                <i class="fa fa-wand-magic-sparkles"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -239,7 +239,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-cog"></i>
+                                <i class="fa fa-industry"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -263,7 +263,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-plane"></i>
+                                <i class="fa fa-scale-balanced"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -287,7 +287,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-group"></i>
+                                <i class="fa fa-road-barrier"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -311,7 +311,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-star"></i>
+                                <i class="fa fa-cubes"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -335,7 +335,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-group"></i>
+                                <i class="fa fa-circle-nodes"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -359,7 +359,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-star"></i>
+                                <i class="fa fa-handshake"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
