--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                         <div class="social">
                              <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a> 
+                            "fa-brands fa-linkedin fa-3x"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
-                            "fa fa-youtube fa-3x"></i></a> <a href=
+                            "fa-brands fa-youtube fa-3x"></i></a> <a href=
                             "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa fa-github fa-3x"></i></a>
+                            "_blank"><i class="fa-brands fa-github fa-3x"></i></a>
                             <a href=
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid ai-3x"></i></a>
@@ -408,12 +408,12 @@
                     <div class="social-footer">
                         <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
-                            "fa fa-linkedin"></i></a> 
+                            "fa-brands fa-linkedin"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
-                            "fa fa-youtube"></i></a> <a href=
+                            "fa-brands fa-youtube"></i></a> <a href=
                             "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa fa-github"></i></a>
+                            "_blank"><i class="fa-brands fa-github"></i></a>
                             <a href=
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid"></i></a>
