--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     integrity=
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet"><!-- FontAwesome Icon Font -->
-    <link href=
+    <!-- <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/6.4.2/css/font-awesome.min.css"
-    rel="stylesheet"><!-- LinearIcons Icon Font -->
+    rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" 
+        integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+    
+    
+    <!-- LinearIcons Icon Font -->
     <link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel=
     "stylesheet"><!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet"><!-- Timeline CSS -->
