--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/6.4.2/css/font-awesome.min.css"
     rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" 
-        integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+    <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
     
     <!-- LinearIcons Icon Font -->
