--- a/index.html
+++ b/index.html
@@ -189,6 +189,46 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             </div> <!-- / row -->
         </div><!-- /container -->
     </section>
+
+
+ <!-- PROJECTS SECTION -->
+    <section class="section-primary" id="projects"> 
+      <div class="img-overlay"></div> 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 section-heading">
+                    <h2>Products</h2>
+                   <p class="lead">Here are a few resources that I produced to advance information in the sciences.</p>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <span> <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"> </span>
+                    <h2> <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">sCubed </a></h2>
+                    <p>sCubed is a Google Sheets add-on that enables scientists to capture details of how investigations were conducted.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <span> <img src="https://aemoore62.github.io/resume/images/squarecube.png" width="200" height="200"> </span>
+                    <h2><a href="#" target="_blank">SquareCube</a></h2>
+                    <p>SquareCube is an R package under development to complement sCubed.</p>
+                </div>
+
+
+                <div class="col-md-4 text-center">
+                    <span> <img src="ssquared" width="200" height="200"> </span>
+                    <span> <img src="https://aemoore62.github.io/resume/images/ssquared.png" width="200" height="200"> </span>
+
+                    <h2><a href="#" target="_blank">sSquared </a></h2>
+
+                    <p>sSquared is a framework for capturing the provenance of material.</p>
+                </div>
+            </div> <!-- / row -->
+        </div><!-- /container -->
+    </section>
+
+
+    
     <!-- TIMELINE SECTION -->
 
 
