update prjt section

--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     </section>
 
     <!-- PROJECTS SECTION -->
-<section class="section-image" id="projects">
-  <div class="img-overlay"></div>
+<section class="section-primary" id="projects">
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-heading">
