--- a/index.html
+++ b/index.html
@@ -423,6 +423,50 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             </div>
         </div> <!-- / container -->
     </section>
+
+    <h2>Personal interests</h2>
+
+
+                    <hr>
+    <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" style="width:100%">
+    <div class="text">Start of 2019 Patagonman, an iron-distance triathlon.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" style="width:100%">
+    <div class="text">Beginning of 2021 Georgia Jewel, a 100-mile trail run.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" style="width:100%">
+    <div class="text">Finish of 2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+
+
+
+    
     <!-- FOOTER SECTION -->
 
     <footer class="footer">
