--- a/index.html
+++ b/index.html
@@ -424,10 +424,20 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         </div> <!-- / container -->
     </section>
 
-    <h2>Personal interests</h2>
+    <section class="section-primary" id="timelinesection">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 section-heading">
+                    <h2>Personal interests</h2>
 
+
+                
 
                     <hr>
+                </div>
+            </div>
+
+
 
     <div class="carousel">
     <div class="carousel-inner">
@@ -462,6 +472,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         </ol>
     </div>
 </div>
+</div>
+</section>        
 
 
     
