--- a/index.html
+++ b/index.html
@@ -429,7 +429,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             <div class="row">
                 <div class="col-md-12 section-heading">
                     <h2>Personal interests</h2>
+                    I enjoy bicycle touring and endurance events, including swimming, cycling, and running. I've cycled three of
+                    the <a href="https://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/interactive-network-map/" target="_blank">Adventure Cycling routes</a>
+: Southern Tier, Pacific Coast, and TransAmerica routes. And I've participated in an iron-distance triathlon and ultra run.
 
+                    
 
                 
 
@@ -443,15 +447,21 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
+            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png">
+            </div>    
         </div>
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
+            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg">
+            </div>    
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
+            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg">
+            </div>    
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
