--- a/index.html
+++ b/index.html
@@ -430,8 +430,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                 <div class="col-md-12 section-heading">
                     <h2>Personal interests</h2>
                     I enjoy bicycle touring and endurance events, including swimming, cycling, and running. I've cycled three of
-                    the <a href="https://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/interactive-network-map/" target="_blank">Adventure Cycling routes</a>
-: Southern Tier, Pacific Coast, and TransAmerica routes. And I've participated in an iron-distance triathlon and ultra run.
+                    the <a href="https://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/interactive-network-map/" target="_blank">Adventure Cycling routes</a>: Southern Tier, Pacific Coast, and TransAmerica routes. And I've participated in an iron-distance triathlon and ultra run.
 
                     
 
