--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     <!-- TIMELINE SECTION -->
 
 
-    <section class="section-primary" id="timelinesection" style="background-color: #daeaf1">
+    <section class="section-primary" id="timelinesection" style="background-color: #e7fbff">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
