--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                     I collaborate across the sciences to <span><b>advance how scientists share complex 
                     information</b></span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span><b>scientists remain challenged to rapidly share science</b></span>, including the data, metadata, and interpretations 
-                    that break grounds, transform life, and propel science. I collaboratively <span><b>reimagine how scientists engage
-                    ubiquitous technologies</b></span> to share complex information about how investigations are conducted. 
+                    Yet <span><b>scientists remain challenged to rapidly share science</b></span>, including the data, metadata, and interpretations. 
+                    I collaboratively <span><b>reimagine how scientists engage
+                    ubiquitous technologies</b></span> to share complex information to help scientists break grounds, propel science, and transform life.
 
                         <br>
                         <br>
