--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid ai-3x"></i></a>
                             <a href=
-                            "https://zenodo.org/search?page=1&size=20&q=creators.orcid:0000-0001-8627-777X" target=
-                            "_blank"><i class="ai ai-zenodo ai-3x"></i></a>
+                            "https://osf.io/6zmaq/" target=
+                            "_blank"><i class="ai ai-osf ai-3x"></i></a>
                             <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
                             "_blank"><i class="ai ai-google-scholar ai-3x"></i></a>
@@ -525,8 +525,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid"></i></a>
                             <a href=
-                            "https://zenodo.org/search?page=1&size=20&q=creators.orcid:0000-0001-8627-777X" target=
-                            "_blank"><i class="ai ai-zenodo"></i></a>
+                            "https://osf.io/6zmaq/" target=
+                            "_blank"><i class="ai ai-osf"></i></a>
                             <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
                             "_blank"><i class="ai ai-google-scholar"></i></a>
