--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                     I collaborate across the sciences to <span><b>advance how scientists share complex 
                     information</b></span>. As digital technologies advance—ranging from artificial intelligence 
                     to quantum computing—scientists gain new avenues towards insight and innovation. 
-                    Yet <span><b>scientists remain challenged to rapidly share science</b></span>, including the data, metadata, and interpretations. 
-                    I collaboratively <span><b>reimagine how scientists engage
-                    ubiquitous technologies</b></span> to share complex information to help scientists break grounds, propel science, and transform life.
+                    Yet <span><b>scientists remain challenged to rapidly share science</b></span>, including the data, metadata, and interpretations that
+                    illuminate life and inspire inquiries, discoveries, and innovations. To help scientists break grounds, propel science, and transform life,
+                    I collaboratively <span><b>reimagine how scientists engage ubiquitous technologies</b></span> to share complex information.
 
                         <br>
                         <br>
                     
                     I hold a PhD in Bioinformatics from University of Georgia (UGA) and a BA in Bioinformatics from 
-                    Hampshire College. I’m currently transitioning into a brief term as a Postdoctoral Fellow in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at 
+                    Hampshire College. I’ve recently transitioned into a brief term as a Postdoctoral Research Associate in the <a href="https://edisonomics.org/" target="_blank">Edison Lab</a> at 
                     UGA. As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
-                    actively developing (see below). </p>
+                    actively developing (see below) and collaborate with the <a href="https://usnan.nmrhub.org/home" target="_blank">Network for Advanced NMR</a> to advance sharing science.</p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
