reorder social links

--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                              <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
                             "fa-brands fa-linkedin fa-3x"></i></a> 
-                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
-                            target="_blank"><i class=
-                            "fa-brands fa-youtube fa-3x"></i></a> <a href=
-                            "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa-brands fa-github fa-3x"></i></a>
                             <a href=
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid ai-3x"></i></a>
                             <a href=
                             "https://osf.io/6zmaq/" target=
                             "_blank"><i class="ai ai-osf ai-3x"></i></a>
+                            <a href=
+                            "https://github.com/aemoore62" target=
+                            "_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
+                            target="_blank"><i class=
+                            "fa-brands fa-youtube fa-3x"></i></a> 
                             <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
                             "_blank"><i class="ai ai-google-scholar ai-3x"></i></a>
@@ -516,17 +517,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                         <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
                             "fa-brands fa-linkedin"></i></a> 
-                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
-                            target="_blank"><i class=
-                            "fa-brands fa-youtube"></i></a> <a href=
-                            "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa-brands fa-github"></i></a>
-                            <a href=
+                         <a href=
                             "https://orcid.org/0000-0001-8627-777X" target=
                             "_blank"><i class="ai ai-orcid"></i></a>
                             <a href=
                             "https://osf.io/6zmaq/" target=
                             "_blank"><i class="ai ai-osf"></i></a>
+                        <a href=
+                            "https://github.com/aemoore62" target=
+                            "_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
+                            target="_blank"><i class=
+                            "fa-brands fa-youtube"></i></a> 
                             <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
                             "_blank"><i class="ai ai-google-scholar"></i></a>
