--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                     <h2>Communicate</h2>
 
 
-                    <p>I love to write and generate engaging visualizations. I enjoy targeting a diversity of audiences, including experts across scientific domains, business stakeholders, and the general public. I enjoy crafting clear, concise narratives that balance scientific insight with context and impact that engage diverse audiences.</p>
+                    <p>I especially like to write and generate engaging visualizations. I enjoy targeting a range of audiences, including experts across scientific domains, business stakeholders, and the general public. I enjoy crafting clear, concise narratives that balance scientific insight with context and impact that engage diverse audiences.</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
