--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     <div class="row">
       <div class="col-md-12 section-heading">
         <h2>Products</h2>
-        <p class="lead">I actively develope resources to advance information in the sciences:</p>
+        <p class="lead">I actively develop resources to advance information in the sciences:</p>
         <hr>
       </div>
     </div>
