--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                                 <p>As a grad student, I sought opportunities to, again, address more conventional
                                 challenges in inconvetional ways. I collaboratively 
                                 <a href="https://github.com/Computational-Plant-Science/BINF8990/blob/main/qCoarseGrainApproach/phenotypeSpace.ipynb"target="_blank">explored reflecting
-                                biological mechanisms on a quantum computer</a>.</p>
+                                biological mechanisms on a quantum computer</a> by evaluating the phenotypes of plant roots collected across multiple plots.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
