--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                                 data. I quickly discovered how hard it is to use metadata in public repositories;
                                 how incomplete metadata are; and how inconsistent laboratory practices are
                                 across federally funded research. This research experience drives my efforts to advance
-                                how scientists share informaiton.</p>
+                                how scientists share information.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
