--- a/index.html
+++ b/index.html
@@ -390,10 +390,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                                 <h2><b>2019</b> | Share Science with Sheets.</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>As a PhD student, I concentrated on imagining, developing, and
+                                distributing tools to help scientists share information. I focused on enabling
+                                scientists to share details of how biological materials are produced and processed, 
+                                known as provenance. As a result, I prototyped 
+                                    <a href="https://workspace.google.com/marketplace/app/share_science_with_sheets_for_google_she/1088810982841" target="_blank">Share Science with Sheets</a>.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -414,10 +415,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                                 <h2><b>Now</b> | Let's share science.</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>I am excited to continue exploring problems in unconventional ways and
+                                produce technologies that enable scientists to share information. If you
+                                are your organization share the same interests let's connect.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
