--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 
                                 <p>After gaining research experince via an NSF REU, I wanted
                                 to develop my own investigation into the affects of different 
-                                lung cancer treatments. To do this, I wanted to use public RNA-seq
+                                treatments for lung cancer. To do this, I wanted to use public RNA-seq
                                 data. I quickly discovered how hard it is to use metadata in public repositories;
                                 how incomplete metadata are; and how inconsistent laboratory practices are
                                 across federally funded research. This research experience drives my efforts to advance
@@ -367,7 +367,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 
 
                                 <p>As a grad student, I sought opportunities to, again, address more conventional
-                                challenges in inconvetional ways. I collaboratively 
+                                challenges in unconvetional ways. I collaboratively 
                                 <a href="https://github.com/Computational-Plant-Science/BINF8990/blob/main/qCoarseGrainApproach/phenotypeSpace.ipynb"target="_blank">explored reflecting
                                 biological mechanisms on a quantum computer</a> by evaluating the phenotypes of plant roots collected across multiple plots.</p>
                             </div>
