--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                                 <h2><b>2018</b> | Why's it so hard to access metadata? Why are laboratory practices inconsistent across investigations?</h2>
 
 
-                                <p>After gaining research experince via an NSF REU, I wanted
+                                <p>After gaining research experience via an NSF REU, I wanted
                                 to develop my own investigation into the affects of different 
                                 treatments for lung cancer. To do this, I wanted to use public RNA-seq
                                 data. I quickly discovered how hard it is to use metadata in public repositories;
