--- a/index.html
+++ b/index.html
@@ -490,7 +490,22 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     </div>
 </div>
 </div>
-</section>        
+</section>  
+
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="Third slide">
+    </div>
+  </div>
+</div>
 
 
     
