--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       </div>
       <div class="col-md-4 text-center">
         <img src="https://aemoore62.github.io/resume/images/squarecube.png" width="200" height="200" alt="SquareCube">
-        <h2><a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">SquareCube</a></h2>
+        <h2><a href="https://aemoore62.github.io/rsquarecube.github.io/#" target="_blank">SquareCube</a></h2>
         <p>SquareCube is an R package under development to complement sCubed.</p>
       </div>
       <div class="col-md-4 text-center">
         <img src="https://aemoore62.github.io/resume/images/ssquared.png" width="200" height="200" alt="sSquared">
-        <h2><a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">sSquared</a></h2>
+        <h2><a href="https://ssquared-docs.readthedocs.io/en/latest/index.html" target="_blank">sSquared</a></h2>
         <p>sSquared is a framework for capturing the provenance of material.</p>
       </div>
     </div><!-- /row -->
