--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       </div>
       <div class="col-md-4 text-center">
         <img src="https://aemoore62.github.io/resume/images/squarecube.png" width="200" height="200" alt="SquareCube">
-        <h2><a href="https://aemoore62.github.io/rsquarecube.github.io/#" target="_blank">SquareCube</a></h2>
-        <p>SquareCube is an R package under development to complement sCubed.</p>
+        <h2><a href="https://aemoore62.github.io/rsquarecube.github.io/#" target="_blank">R/SquareCube</a></h2>
+        <p>R/SquareCube is an R package under development to complement sCubed.</p>
       </div>
       <div class="col-md-4 text-center">
         <img src="https://aemoore62.github.io/resume/images/ssquared.png" width="200" height="200" alt="sSquared">
@@ -290,7 +290,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 
 
                             <div class="timeline-content left">
-                                <h2><b>2016</b> | I can be a scientist.</h2>
+                                <h2><b>2016</b> | I want to lead solutions.</h2>
 
 
                                 <p>While I knew for many years that I wanted to work in bioinformatics, it
@@ -491,22 +491,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 </div>
 </div>
 </section>  
-
-
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="Third slide">
-    </div>
-  </div>
-</div>
-
 
     
     <!-- FOOTER SECTION -->
