--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="" name="author">
     <link href="../../favicon.ico" rel="icon">
 
-    <title>ClearCareer</title><!-- Bootstrap core CSS -->
+    <title>Abigail Elizabeth</title><!-- Bootstrap core CSS -->
     <link crossorigin="anonymous" href=
     "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     integrity=
@@ -451,24 +451,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png">
                 <p>2019 Patagonman, an iron-distance triathlon.</p>
             </div>    
-        </div>
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg">
                 <p>2021 Georgia Jewel, a 100-mile trail run.</p>
-            </div>    
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <div class="d-flex justify-content-center">
             <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg">
                 <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
-            </div>    
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
@@ -491,6 +485,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 </div>
 </div>
 </section>  
+
+    
 
     
     <!-- FOOTER SECTION -->
