--- a/index.html
+++ b/index.html
@@ -451,17 +451,17 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png">
+            <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" height="300px">
                 <p>2019 Patagonman, an iron-distance triathlon.</p>
             </div>    
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg">
+            <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" height="300px">
                 <p>2021 Georgia Jewel, a 100-mile trail run.</p>
         </div>
-        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
+        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="" >
         <div class="carousel-item">
-            <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg">
+            <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" height="300px">
                 <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
