--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         </div> <!-- / container -->
     </section>
 
-    <section class="section-primary" id="timelinesection">
+    <section class="section-primary" id="personalinterest">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
@@ -493,7 +493,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             </li>
         </ol>
     </div>
-
+</div>
 </div>
 </section>  
 
