--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             </li>
         </ol>
     </div>
-
+</div>
     
 
     
