--- a/index.html
+++ b/index.html
@@ -447,6 +447,20 @@ for some of my work.</p>
                 </div>
             </div>
 
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" class="d-block w-100" alt="patagonman">
+    </div>
+    <div class="carousel-item">
+      <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" class="d-block w-100" alt="ga jewel">
+    </div>
+    <div class="carousel-item">
+      <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" class="d-block w-100" alt="transam">
+    </div>
+  </div>
+</div>
+
 </div>
 </section> 
 
