--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ for some of my work.</p>
     </div>
 
     <div class="item">
-      <img src="2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race." alt="transam">
+      <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="transam">
         <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
     </div>
   </div>
