--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     "stylesheet"><!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet"><!-- Timeline CSS -->
     <link href="css/timeline.css" rel="stylesheet">
-    <!-- <link href="css/carousel.css" rel="stylesheet"> -->
+    <link href="css/carousel.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 
 </head>
