--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@ for some of my work.</p>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" alt="patagonman">
+      <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" alt="patagonman" height="250px">
         <p>2019 Patagonman, an iron-distance triathlon.</p>
     </div>
 
     <div class="item">
-      <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" alt="ga jewel">
+      <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" alt="ga jewel" height="250px">
         <p>2021 Georgia Jewel, a 100-mile trail run.</p>
     </div>
 
     <div class="item">
-      <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="transam">
+      <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="transam" height="250px">
         <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
     </div>
   </div>
