--- a/index.html
+++ b/index.html
@@ -447,43 +447,20 @@ for some of my work.</p>
                 </div>
             </div>
 
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+            <figure>
+    <img src='https://aemoore62.github.io/resume/images/patagonman_ferry.png' alt='missing' />
+    <figcaption>2019 Patagonman, an iron-distance triathlon.</figcaption>
+</figure>
+<figure>
+    <img src='https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg' alt='missing' />
+    <figcaption>2021 Georgia Jewel, a 100-mile trail run.</figcaption>
+</figure>
+            <figure>
+    <img src='https://aemoore62.github.io/resume/images/tabr_monument.jpg alt='missing' />
+    <figcaption>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</figcaption>
+</figure>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" alt="patagonman" height="250px">
-        <p>2019 Patagonman, an iron-distance triathlon.</p>
-    </div>
-
-    <div class="item">
-      <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" alt="ga jewel" height="250px">
-        <p>2021 Georgia Jewel, a 100-mile trail run.</p>
-    </div>
-
-    <div class="item">
-      <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" alt="transam" height="250px">
-        <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
+  
 </div>
 </section> 
     
