--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ for some of my work.</p>
     <figcaption>2021 Georgia Jewel, a 100-mile trail run.</figcaption>
 </figure>
             <figure>
-    <img src='https://aemoore62.github.io/resume/images/tabr_monument.jpg alt='missing' />
+    <img src='https://aemoore62.github.io/resume/images/tabr_monument.jpg' alt='missing' />
     <figcaption>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</figcaption>
 </figure>
 
