--- a/index.html
+++ b/index.html
@@ -447,18 +447,30 @@ for some of my work.</p>
                 </div>
             </div>
 
-            <figure>
-    <img src='https://aemoore62.github.io/resume/images/patagonman_ferry.png' alt='missing' />
-    <figcaption>2019 Patagonman, an iron-distance triathlon.</figcaption>
-</figure>
-<figure>
-    <img src='https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg' alt='missing' />
-    <figcaption>2021 Georgia Jewel, a 100-mile trail run.</figcaption>
-</figure>
-            <figure>
-    <img src='https://aemoore62.github.io/resume/images/tabr_monument.jpg' alt='missing' />
-    <figcaption>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</figcaption>
-</figure>
+            <div class="container">
+    <div class="row">
+      <div class="col-md-12 section-heading">
+        <h2>Products</h2>
+        <p class="lead">I actively develop resources to advance information in the sciences:</p>
+        <hr>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" width="200" height="200" alt="patagonman">
+        <p>2019 Patagonman, an iron-distance triathlon.</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" width="134" height="200" alt="ga jewl">
+        <p>R/SquareCube is an R package under development to complement sCubed.</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" width="150" height="200" alt="sSquared">
+        <h2><a href="https://ssquared-docs.readthedocs.io/en/latest/index.html" target="_blank">tabr</a></h2>
+        <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
+      </div>
+    </div><!-- /row -->
+  </div><!-- /container -->
 
   
 </div>
