--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                     UGA. As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
                     actively developing (see below) and collaborate with the <a href="https://usnan.nmrhub.org/home" target="_blank">Network for Advanced NMR</a> to advance sharing science.</p>
                
-                    <h2><a href="https://github.com/aemoore62/resume/blob/gh-pages/abigail_elizabeth_resume.pdf" target="_blank">RESUME</a></h2>
+                    <span><b><a href="https://github.com/aemoore62/resume/blob/gh-pages/abigail_elizabeth_resume.pdf" target="_blank">Resume</a></h2></b></span>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
